tests/baselines/reference/templateStringInYieldKeyword.errors.txt
tests/cases/conformance/es6/templates/templateStringInYieldKeyword.ts(1,9): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/templates/templateStringInYieldKeyword.ts (1 errors) ====
    function* gen() {
            ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
        // Once this is supported, the inner expression does not need to be parenthesized.
        var x = yield `abc${ x }def`;
    }
    